--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,12 +13,26 @@
         android:orientation="vertical"
         android:padding="24dp">
 
+        <!-- Título -->
+        <TextView
+            android:id="@+id/loginTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bienvenido a AppRo"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#4CAF50"
+            android:layout_marginBottom="24dp" />
+
+        <!-- Campo de Correo -->
         <EditText
             android:id="@+id/emailEditText"
             android:hint="Correo electrónico"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <!-- Campo de Contraseña -->
 
         <EditText
             android:id="@+id/passwordEditText"
@@ -27,12 +41,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <!-- Boton de Inicio de sesión -->
+
         <Button
             android:id="@+id/loginButton"
             android:text="Iniciar sesión"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"/>
+
+        <!-- Registro -->
 
         <TextView
             android:id="@+id/goToRegisterText"
