--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -23,11 +23,13 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_user_default"
-        android:contentDescription="Foto de perfil"
-        android:background="@drawable/circle_bg"
         android:scaleType="centerCrop"
-        android:layout_marginBottom="16dp"/>
+        android:src="@drawable/profile_placeholder"
+        android:background="@drawable/profile_name_border"
+        android:contentDescription="Foto de perfil"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"/>
+
 
     <!-- Nombre -->
     <TextView
