--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,9 +120,9 @@
                 android:id="@+id/btnResiduos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Residuos"
                 android:layout_marginTop="16dp"
                 android:backgroundTint="@color/blue_500"
+                android:text="Recolección"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
