--- a/app/src/main/res/layout/dialog_agregar_residuo.xml
+++ b/app/src/main/res/layout/dialog_agregar_residuo.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:padding="20dp"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/nombreResiduoEditText"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nombre del residuo" />
-
-    <EditText
-        android:id="@+id/cantidadEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Cantidad"
-        android:inputType="numberDecimal" />
+        android:text="Selecciona el tipo"
+        android:textStyle="bold" />
 
     <Spinner
-        android:id="@+id/unidadSpinner"
+        android:id="@+id/spinnerTipo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <EditText
+        android:id="@+id/editCantidad"
+        android:hint="Cantidad"
+        android:inputType="number"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/editPeso"
+        android:hint="Peso aproximado (kg)"
+        android:inputType="numberDecimal"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
