--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="purple_500">#6200EE</color>  <!-- Agrega esta línea -->
     <color name="orange_500">#FB8C00</color>
     <color name="blue_500">#2196F3</color>
+    <color name="bottom_nav_color">#FF9800</color> <!-- Naranja uniforme -->
 
 </resources>
